--- a/src/icons/Astro.astro
+++ b/src/icons/Astro.astro
@@ -1,4 +1,4 @@
-<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+<svg class="size-10 group-hover:size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
   <defs>
     <linearGradient
       id="a"
