--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -31,13 +31,13 @@ const CONOCIMIENTO = {
 </style>
 
 <article>
- <section class=`text-gray-300/90 my-6 flex flex-col gap-y-4`>
+ <section class=`text-gray-300/90 my-6 flex flex-col gap-y-6`>
     <span class="font-semibold">¡Hola👋! soy un profesional apasionado por la tecnología y el diseño, con una sólida formación en Tecnologías de Información y una carrera técnica en Diseño Gráfico. </span>
     
     <span class="block font-bold text-2xl">Experimentado en el desarrollo Full Stack. 🚀</span>
     
     <div class="bg-gray-800/30 p-4 rounded-md">
-      <code class="text-orange-200 sm:whitespace-pre font-semibold">
+      <code class="text-sm sm:text-base text-orange-200 sm:whitespace-pre font-semibold">
         <span class="text-violet-300 -ml-2">const</span> <span class="text-cyan-200">aplicacionExitosa</span> = (<span class="text-red-300">diseño</span> + <span class="text-red-300">desarrollo</span>) => &#123;
       <span class="text-violet-300 sm:ml-12">return</span> <span class="text-green-200">"¡Aplicación Impresionante!"</span>;
 &#125;
