--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -144,7 +144,7 @@ const PROJECTS = [
           <GitHubIcon />
           Repositorio
         </SocialPill>
-        <SocialPill class="sm:hidden" href={github}>
+        <SocialPill class="sm:hidden" href={link}>
           <LinkIcon />
           Abrir aplicación
         </SocialPill>
