--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,15 +6,15 @@ import WhatsappIcon from "../icons/Whatsapp.astro"
 
 <footer class="rounded-lg shadow w-full backdrop-blur-sm">
   <div
-    class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+    class="w-full mx-auto max-w-screen-xl p-4 sm:flex sm:items-center sm:justify-between"
   >
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+    <span class="text-sm sm:text-center text-gray-400 flex justify-center gap-4"
       >© 2024 <a href="/" class="hover:underline"
         >Cross Dev</a
       >
     </span>
     <ul
-      class="flex flex-wrap gap-4 items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+      class="flex flex-wrap gap-4 items-center justify-center mt-3 text-sm font-medium text-gray-400 sm:mt-0"
     >
         <h4>Contáctame</h4>
       <SocialPill href="mailto:racq_2002@outlook.com" class="size-9">
