--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ import AboutMe from "../components/AboutMe.astro";
     </section>
 
     <section id="about" class="pb-60">
-      <h2 class="text-lg sm:text-3xl font-semibold mb-4 flex items-center gap-x-3">
+      <h2 class="text-2xl sm:text-3xl font-semibold mb-4 flex items-center gap-x-3 text-nowrap">
         <UserIcon class="size-8" />
         Sobre mí
       </h2>
