Remove color-schema to change everything to dark mode

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -11,7 +11,7 @@ const EXPERIENCIE = [
 ];
 ---
 
-<ol class="relative sm:left-3 pr-2 border-s border-gray-200 dark:border-gray-500">
+<ol class="relative sm:left-3 pr-2 border-s border-gray-500">
   {
     EXPERIENCIE.map((exp) => (
       <li class="mb-10 ms-4">
