--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,11 +32,11 @@ const { title, description } = Astro.props;
 </html>
 <style is:global>
   :root {
-    color-scheme: light dark;
   }
 
   html {
     font-family: "Onest Variable", system-ui, sans-serif;
+    color: white;
     scroll-behavior: smooth;
     scroll-padding-top: 30vh;
   }
