--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,5 +1,5 @@
 <span
-  class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-600 dark:text-green-100"
+  class="bg-green-600 text-green-100 text-xs font-medium me-2 px-2.5 py-0.5 rounded"
 >
   <slot />
 </span>
