--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -9,16 +9,16 @@ const { title, description, date } = Astro.props;
 ---
 
 <div
-  class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-400"
+  class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border-gray-900 bg-gray-400"
 >
 </div>
 <time
-  class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-300/85"
+  class="mb-1 text-sm font-normal leading-none text-gray-300/85"
   >{date}</time
 >
-<h3 class="sm:text-lg mb-1 sm:md-0 mt-2 font-semibold text-gray-900 dark:text-amber-200">
+<h3 class="sm:text-lg mb-1 sm:md-0 mt-2 font-semibold text-amber-200">
   {title}
 </h3>
-<p class="text-pretty mb-4 text-sm sm:text-base font-normal text-gray-500 dark:text-gray-300/90">
+<p class="text-pretty mb-4 text-sm sm:text-base font-normal text-gray-300/90">
   {description}
 </p>
