Add new project

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -14,6 +14,7 @@ import TypeScriptIcon from "../icons/TypeScript.astro";
 import NodeJSIcon from "../icons/NodeJS.astro";
 import AstroIcon from "../icons/Astro.astro";
 import TailwindIcon from "../icons/Tailwind.astro";
+import BootstrapIcon from "../icons/Bootstrap.astro";
 
 const CONOCIMIENTO = {
   ALTO: `col-span-6 row-span-6`,
@@ -103,9 +104,9 @@ const CONOCIMIENTO = {
       <span class="hidden group-hover:block text-lg">MySQL</span>
     </TechSquare>
 
-    <TechSquare class=`hover:bg-[#306998] group ${CONOCIMIENTO.MEDIO}`>
-      <PythonIcon class="size-10 group-hover:size-0 md:group-hover:size-8" />
-      <span class="hidden group-hover:block text-lg">Python</span>
+    <TechSquare class=`hover:bg-[#007BFF] group ${CONOCIMIENTO.MEDIO}`>
+      <BootstrapIcon class="size-10 group-hover:size-0 md:group-hover:size-8" />
+      <span class="hidden group-hover:block text-lg">BootStrap</span>
     </TechSquare>
 
     <TechSquare class=`hover:bg-[#3178C6] group ${CONOCIMIENTO.MEDIO_BAJO}`>
@@ -120,9 +121,9 @@ const CONOCIMIENTO = {
       <span class="hidden group-hover:block text-lg">Node.js</span>
     </TechSquare>
 
-    <TechSquare class=`hover:bg-[#092E20] group ${CONOCIMIENTO.MEDIO_BAJO}`>
-      <DjangoIcon class="size-11 group-hover:size-0 md:group-hover:size-8" />
-      <span class="hidden group-hover:block text-lg">Django</span>
+    <TechSquare class=`hover:bg-[#306998] group ${CONOCIMIENTO.MEDIO_BAJO}`>
+      <PythonIcon class="size-11 group-hover:size-0 md:group-hover:size-8" />
+      <span class="hidden group-hover:block text-lg">Python</span>
     </TechSquare>
 
     <TechSquare class=`hover:bg-[#68217A] group ${CONOCIMIENTO.BAJO}`>
