--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,14 +31,13 @@ const { title, description } = Astro.props;
   </body>
 </html>
 <style is:global>
-  :root {
-  }
-
+  
   html {
     font-family: "Onest Variable", system-ui, sans-serif;
     color: white;
     scroll-behavior: smooth;
     scroll-padding-top: 30vh;
+    overflow-x: hidden;
   }
 
   @media (prefers-reduced-motion: reduce) {
