--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ import WhatsappIcon from "../icons/Whatsapp.astro";
   >
     <a href="/" class="flex justify-center items-center"
       ><img
-        src="../../public/logo.png"
+        src="logo.png"
         alt="Logotipo de Rubén Cruz"
         class="h-16"
       /></a
