--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,11 +3,16 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCIE = [
   {
+    date: "Febrero 2024 - Actualmente",
+    title: "Practicante QA - Stella Tech",
+    description: "Mi enfoque ha estado en realizar pruebas exhaustivas para garantizar la calidad del producto. He trabajado en la creación y ejecución de casos de prueba, así como en la identificación y documentación de problemas encontrados durante las pruebas. Mi objetivo ha sido contribuir al proceso de desarrollo asegurando que el producto final cumpla con los estándares de calidad esperados. Utilizando una variedad de herramientas para llevar a cabo pruebas en una aplicación web. Entre ellas se encuentran Postman, Insomnia, DBeaver y un poco de MongoDB Compass y Xftp."
+  },
+  {
     date: "Julio 2023 - Enero 2024",
     title: "Practicante de Sistemas - DEACERO",
     description:
       "Estuve desarrollando de manera Full Stack, centré mi experiencia principalmente en el frontend, haciendo uso de tecnologías como React y Tailwind CSS. Me especialicé en la creación de componentes reutilizables, mejora de la UI/UX y consumo de APIs del backend. Por la parte del backend trabajé con consultas LINQ, servicios web RESTful, entre otras cosas usando C# y ASP.NET. En base de datos SQL Server, mi enfoque se centró en la navegación. Participando en Scrum y el uso de Jira facilitaron la gestión ágil del desarrollo.",
-  },
+  }
 ];
 ---
 
